--- a/templates/haproxy.cfg.j2
+++ b/templates/haproxy.cfg.j2
@@ -47,7 +47,7 @@ defaults
 listen stats
     mode {{ haproxy_listen_stats_mode }}
     {% if haproxy_listen_stats_https | default(false) %}
-    bind "{{ haproxy_listen_stats_bind }}:{{ haproxy_listen_stats_port }}" ssl crt {{ haproxy_ssl_path }}/{{ haproxy_listen_stats_domain }}/{{ haproxy_listen_stats_domain }}.pem
+    bind "{{ haproxy_listen_stats_bind }}:{{ haproxy_listen_stats_port }}" ssl crt {{ haproxy_listen_stats_fullchain }}
     {% else %}
     bind "{{ haproxy_listen_stats_bind }}:{{ haproxy_listen_stats_port }}"
     {% endif %}
